--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@ionic/angular": "^6.4.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
+    "daisyui": "^2.46.1",
     "flowbite": "^1.6.0",
+    "lightgallery": "^2.7.1",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
