--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "daisyui": "^2.46.1",
     "flowbite": "^1.6.0",
     "lightgallery": "^2.7.1",
+    "ng-angular-popup": "^0.2.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
