--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "^14.2.0",
     "@angular/cdk": "^13.0.0",
-    "@angular/common": "^14.2.0",
+    "@angular/common": "^14.2.12",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
@@ -33,6 +33,7 @@
     "flowbite": "^1.6.0",
     "lightgallery": "^2.7.1",
     "ng-angular-popup": "^0.2.0",
+    "ngx-countdown": "^15.0.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
